--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,25 @@
 sudo: required
-language: "generic"
+language: generic
 services:
   - docker
 
 before_install:
-  docker build -t kberdiev/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t kberdiev/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  docker run -e CI=true kberdiev/react-test npm test
+  - docker run -e CI=true kberdiev/react-test npm test
 
 after_success:
-  docker build -t kberdiev/multi-client ./client
-  docker build -t kberdiev/multi-nginx ./nginx
-  docker build -t kberdiev/multi-server ./server
-  docker build -t kberdiev/multi-worker ./worker
+  - docker build -t kberdiev/multi-client ./client
+  - docker build -t kberdiev/multi-nginx ./nginx
+  - docker build -t kberdiev/multi-server ./server
+  - docker build -t kberdiev/multi-worker ./worker
   
   # Login to the docker CI
-  echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   
   # take the images and push them to the docker hub
-  docker push kberdiev/multi-client
-  docker push kberdiev/multi-nginx
-  docker push kberdiev/multi-server
-  docker push kberdiev/multi-worker
+  - docker push kberdiev/multi-client
+  - docker push kberdiev/multi-nginx
+  - docker push kberdiev/multi-server
+  - docker push kberdiev/multi-worker
